Add checkout branch to action call

--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -40,7 +40,7 @@ jobs:
           curl markdown file to ${{ env.FILE_PATH }}
 
       - name: Run action
-        uses: philnewm/markdown-conversion
+        uses: philnewm/markdown-conversion@main
         with:
           markdown_file_path: ${{ env.FILE_PATH }}
           code: true
