--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -10,22 +10,34 @@ on:
       - '**/*.md'
       - .gitignore
 
+env:
+  PYTHON_VERSION: "3.12"
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
           ref: "main"
           fetch-depth: 0
 
-      - name: Run Pytest
+      - name: Run unit tests
         run: |
-          pip install pytest pytest-cov
           pytest
-        working-directory: ${{ github.workspace }}/tests
+        working-directory: ${{ github.workspace }}
 
   integration-tests:
     needs: unit-tests
@@ -47,7 +59,7 @@ jobs:
           admonitions: true
           target_path: "path/to/output.md"
 
-      - name: Compare to reference
+      - name: Test output
         run:
           if diff -q "path/to/output.md" "path/to/reference.md"; then
             echo "Files are the same"
