--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -1,3 +1,5 @@
+---
+
 name: Unit Testing
 
 on:
@@ -26,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install -r requirements.txt
 
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -68,3 +70,4 @@ jobs:
             exit 1
           fi
 
+...
