--- a/action.yml
+++ b/action.yml
@@ -11,17 +11,17 @@ inputs:
   markdown_file_path:
     description: 'The path to the markdown file to convert'
     required: true
-  code:
-    description: 'Convert code blocks to fit the requirements of the blog provider'
-    required: false
-    default: "false"
-  code_files:
-    description: 'The location of the code files to insert into the markdown file'
-    required: false
   admonitions:
     description: 'Convert admonitions to fit the requirements of the blog provider'
     required: false
     default: "false"
+  code:
+    description: 'Convert code blocks to fit the requirements of the blog provider'
+    required: false
+    default: "false"
+  code_source:
+    description: 'The source of the code files to insert into the markdown file'
+    required: false
   target_path:
     description: 'The path to save the converted file'
     required: true
@@ -35,7 +35,14 @@ runs:
       run: |
         cp ${{ inputs.markdown_file_path }} ${{ inputs.target_path }}
 
+    - name: Get code files
+      if: code
+      shell: bash
+      run: |
+        curl
+
     - name: Replace code references
+      if: code
       shell: bash
       run: |
         python markdown-conversion.py insert_code_references ${{ inputs.target_path }} ${{ inputs.code_files }}
