--- a/action.yml
+++ b/action.yml
@@ -46,18 +46,21 @@ runs:
         echo "Current working directory: $(pwd)"
         echo "Files:"
         ls -R
+      working-directory: $GITHUB_ACTION_PATH
 
     - name: Get code files
       if: inputs.code
       shell: bash
       run: |
         python markdown_conversion.py download-files ${{ inputs.domain_url }} ${{ inputs.markdown_file_path }} 
+      working-directory: $GITHUB_ACTION_PATH
 
     - name: Replace code references
       if: inputs.code
       shell: bash
       run: |
         python markdown_conversion.py insert-code-references ${{ inputs.markdown_file_path }} ${{ inputs.output_file_code }}
+      working-directory: $GITHUB_ACTION_PATH
 
     # TODO Ensure logic can run independent from each other
     # currently update admonitions is dependent on code-replacement
@@ -65,5 +68,6 @@ runs:
       shell: bash
       run: |
         python markdown_conversion.py replace_admonitions ${{ inputs.output_file_code }} ${{ inputs.output_file_admonitions }}
+      working-directory: $GITHUB_ACTION_PATH
 
 ...
