--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,13 @@ runs:
       with:
         python-version: 3.12
 
+    - name: Install dependencies
+      shell: bash
+      run: |
+        cd $GITHUB_ACTION_PATH
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Debug File Paths
       shell: bash
       run: |
