--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -69,6 +69,10 @@ jobs:
           admonitions: true
           output_file_admonitions: ${{ env.OUTPUT_ADMONITIONS }}
 
+      - name: Show files
+        run: |
+          tree -h
+
       - name: Upload gh_output
         uses: actions/upload-artifact@v4
         with:
