--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -62,12 +62,9 @@ jobs:
       - name: Run action
         uses: philnewm/markdown-conversion@main
         with:
-          domain_url: ${{ env.URL }}
-          markdown_file_path: ${{ env.FILE_PATH }}
-          code: true
-          output_file_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
-          admonitions: true
-          output_file_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
+          markdown_file_urls: https://${{ env.URL }}/${{ env.REFERENCE_FILE }}
+          output_dir_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
+          output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
 
       - name: Show files
         run: |
