--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Run action
         uses: philnewm/markdown-conversion@main
         with:
-          markdown_file_urls: "https://${{ env.URL }}/${{ env.REFERENCE_FILE }}"
+          markdown_file_urls: "https://${{ env.URL }}/${{ env.FILE_PATH }}"
           output_dir_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
           output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
 
@@ -84,7 +84,7 @@ jobs:
 
       - name: Test output
         run: |
-          if diff -q ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }} ${{ github.workspace }}/${{ env.REFERENCE_FILE }}; then
+          if diff -q ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}/${{ env.FILE_PATH }} ${{ github.workspace }}/${{ env.REFERENCE_FILE }}; then
             echo "Files are the same"
           else
             echo "Files are different"
