--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -75,13 +75,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: gh_output
-          path: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
+          path: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }}
+          if-no-files-found: error
+
 
       - name: Upload devto_output
         uses: actions/upload-artifact@v4
         with:
           name: devto_output
-          path: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
+          path: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}/${{ env.FILE_PATH }}
+          if-no-files-found: error
 
       - name: Test output code
         run: |
