--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -64,7 +64,7 @@ jobs:
         uses: philnewm/markdown-conversion@main
         with:
           markdown_file_urls: "https://${{ env.URL }}/${{ env.FILE_PATH }}"
-          output_dir_code: /${{ github.workspace }}/${{ env.OUTPUT_CODE }}
+          output_dir_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
           # output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
 
       - name: Show files
@@ -75,7 +75,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: code_output
-          path: /${{ github.workspace }}/${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }}
+          path: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }}
           if-no-files-found: error
 
       # - name: Upload admonition_output
