Enable code conversion

--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,7 @@ runs:
         python markdown_conversion.py download ${{ inputs.markdown_file_urls }}
 
     - name: Replace code references
-      if: inputs.output_file_admonitions
+      if: inputs.output_dir_code
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
