--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,7 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        python markdown_conversion.py download ${{ inputs.markdown_file_urls }}
+        python markdown_conversion.py download "${{ inputs.markdown_file_urls }}"
 
     - name: Show current files
       shell: bash
@@ -57,7 +57,7 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        python markdown_conversion.py insert-code-references  ${{ inputs.output_dir_code }}
+        python markdown_conversion.py insert-code-references  "${{ inputs.output_dir_code }}"
 
     # TODO Ensure logic can run independent from each other
     # currently update admonitions is dependent on code-replacement
