--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           markdown_file_urls: "https://${{ env.URL }}/${{ env.FILE_PATH }}"
           output_dir_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
-          # output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
+          output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
 
       - name: Show files
         run: |
@@ -78,16 +78,16 @@ jobs:
           path: ${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }}
           if-no-files-found: error
 
-      # - name: Upload admonition_output
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: admintion_output
-      #     path: ${{ env.OUTPUT_ADMONITIONS }}/${{ env.FILE_PATH }}
-      #     if-no-files-found: error
+      - name: Upload admonition_output
+        uses: actions/upload-artifact@v4
+        with:
+          name: admintion_output
+          path: ${{ env.OUTPUT_ADMONITIONS }}/${{ env.FILE_PATH }}
+          if-no-files-found: error
 
       - name: Test output code
         run: |
-          if diff -q ${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }} ${{ env.REFERENCE_CODE }}; then
+          if diff -q ${{ env.OUTPUT_CODE }}/${{ env.FILE_PATH }} ${{ env.REFERENCE_ADMONITIONS }}; then
             echo "Files are the same"
           else
             echo "Files are different"
