--- a/action.yml
+++ b/action.yml
@@ -66,6 +66,6 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        python markdown_conversion.py replace-admonitions ${{ inputs.output_file_code }} ${{ inputs.output_file_admonitions }}
+        python markdown_conversion.py replace-admonitions ${{ inputs.output_dir_code }} ${{ inputs.output_dir_admonitions }}
 
 ...
