--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Upload admonition_output
         uses: actions/upload-artifact@v4
         with:
-          name: admintion_output
+          name: admonition_output
           path: ${{ env.OUTPUT_ADMONITIONS }}/${{ env.FILE_PATH }}
           if-no-files-found: error
 
