--- a/action.yml
+++ b/action.yml
@@ -61,7 +61,8 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        python markdown_conversion.py insert-code-references "${{ inputs.output_dir_code }}" "{{ inputs.fence_formatting }}"
+        FENCE_FORMATTING_BOOL=$( [[ "${{ inputs.fence_formatting }}" == "true" ]] && echo "true" || echo "false" )
+        python markdown_conversion.py insert-code-references "${{ inputs.output_dir_code }}" "$FENCE_FORMATTING_BOOL"
 
     # TODO Ensure logic can run independent from each other
     # currently update admonitions is dependent on code-replacement
