--- a/.github/workflows/conversion-ci.yml
+++ b/.github/workflows/conversion-ci.yml
@@ -65,6 +65,7 @@ jobs:
           markdown_file_urls: "https://${{ env.URL }}/${{ env.FILE_PATH }}"
           output_dir_code: ${{ github.workspace }}/${{ env.OUTPUT_CODE }}
           output_dir_admonitions: ${{ github.workspace }}/${{ env.OUTPUT_ADMONITIONS }}
+          code_parameters: "true"
 
       - name: Show files
         run: |
