--- a/action.yml
+++ b/action.yml
@@ -68,8 +68,7 @@ runs:
       shell: bash
       run: |
         cd $GITHUB_ACTION_PATH
-        FENCE_FORMATTING_BOOL=$( [[ "${{ inputs.code_parameters }}" == "true" ]] && echo "true" || echo "false" )
-        python markdown_conversion.py insert-code-references "${{ inputs.output_dir_code }}" "$FENCE_FORMATTING_BOOL"
+        python markdown_conversion.py insert-code-references "${{ inputs.output_dir_code }}" "${{ inputs.output_dir_code }}"
 
     # TODO Ensure logic can run independent from each other
     # currently update admonitions is dependent on code-replacement
